fix(tabs): hide scrollbar on overflow

--- a/components/tabs/_tabs.scss
+++ b/components/tabs/_tabs.scss
@@ -10,6 +10,7 @@
   background-color: var(--md-sys-color-surface);
   margin: 0 auto;
   white-space: nowrap;
+  scrollbar-width: none;
 
   &.tabs-transparent {
     background-color: transparent;
@@ -78,12 +79,15 @@
       flex-direction: column;
       width: 100%;
       height: 100%;
-      min-height: 48px;  //needed for only-icons tabs
+      min-height: 48px; //needed for only-icons tabs
       padding: 0 24px;
       font-size: 14px;
       text-overflow: ellipsis;
+      user-select: none;
       overflow: hidden;
-      transition: color .28s ease, background-color .28s ease;
+      transition:
+        color 0.28s ease,
+        background-color 0.28s ease;
 
       &.active {
         background-color: transparent;
